ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bms-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /anitha
            pathType: Prefix
            backend:
              service:
                name: bms-service    # should match service.yml
                port:
                  number: 3000
